labs-k8s/webapp-balanced/webapp-balanced.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: webapp-balanced
  labels:
    name: webapp-balanced
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-balanced
  namespace: webapp-balanced
  labels:
    app: webapp-balanced
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-balanced
  template:
    metadata:
      labels:
        app: webapp-balanced
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - webapp-balanced
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: webapp-balanced
        image: quay.io/rhte_2019/webapp:v1
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
        volumeMounts:
        - name: site-pvc-balanced
          mountPath: /var/www/public
      volumes:
      - name: site-pvc-balanced
        persistentVolumeClaim:
          claimName: nfs-pvc-balanced
---
apiVersion: v1
kind: Service
metadata:
    name: balanced-service
    namespace: webapp-balanced
spec:
    selector:
      app: webapp-balanced
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: balanced-ingress
  namespace: webapp-balanced
  labels:
    app: webapp-balanced
  annotations:
      haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: foo-balanced.bar
    http:
      paths:
      - path: /balanced
        pathType: "Prefix"
        backend:
          service:
            name: balanced-service
            port:
              number: 80
